# ui_alpha

./: CMakeLists.txt
include/: qstr.h  uimainwindow.h
src/: CMakeLists.txt  main.cpp  qstr.cpp  uimainwindow.cpp  uiparse.ui
